# kakoune

./: CMakeLists.txt
